Preventing team search from getting too big

--- a/frontend/components/team-header/TeamHeader.module.scss
+++ b/frontend/components/team-header/TeamHeader.module.scss
@@ -37,9 +37,20 @@
     z-index: 5;
     top: calc(100% + var(--space));
     width: 100%;
+    max-height: 400px;
+    overflow: auto;
     padding: var(--spacing-secondary);
     background-color: var(--background-tertiary);
     border-radius: var(--border-radius-secondary);
+
+    &::-webkit-scrollbar {
+        width: 25px;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: var(--background-quaternary);
+        border: 8px solid var(--background-tertiary);
+        border-radius: 120px;
+    }
 }
 .search-group:not(:first-child) {
     padding-top: var(--spacing-tertiary);
